--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuenta regresiva</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> <!-- Cargando Poppins en negrita -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #000000;
             color: #ffffff;
-            font-family: 'Poppins', sans-serif; /* Usando Poppins */
+            font-family: 'Poppins', sans-serif;
             text-align: center;
-            padding-top: 50px; /* Ajustado para más espacio arriba */
+            padding-top: 50px;
             margin: 0;
         }
         #fullscreen-toggle {
@@ -25,58 +25,58 @@
         }
         #countdown {
             font-size: 50px;
-            margin-top: 20px; /* Espaciado entre el texto y la cuenta regresiva */
+            margin-top: 20px;
         }
         .time {
             display: inline-block;
             margin: 0 10px;
             text-align: center;
-            width: 100px; /* Ancho fijo para que sean cuadradas */
-            height: 100px; /* Alto fijo para que sean cuadradas */
-            background-color: #02d609; /* Color verde para la caja */
-            color: #000000; /* Color negro para los números */
-            border-radius: 5px; /* Bordes ligeramente redondeados */
-            line-height: 100px; /* Centrar verticalmente el número */
-            font-size: 60px; /* Tamaño del número */
-            font-weight: 900; /* Peso de la fuente en negrita */
+            width: 100px;
+            height: 100px;
+            background-color: #02d609;
+            color: #000000;
+            border-radius: 5px;
+            line-height: 100px;
+            font-size: 60px;
+            font-weight: 900;
         }
         .label {
             display: block;
             font-size: 20px;
-            color: #ffffff; /* Color blanco para las palabras */
-            margin-top: -20px; /* Espaciado entre el número y la etiqueta */
+            color: #ffffff;
+            margin-top: -20px;
         }
         .separator {
             display: inline-block;
             font-size: 50px;
-            color: #ffffff; /* Color blanco para el separador */
-            vertical-align: top; /* Alinear los separadores al top */
+            color: #ffffff;
+            vertical-align: top;
         }
         .heading {
-            font-size: 24px; /* Tamaño reducido para el encabezado */
-            font-weight: 600; /* Semi-bold */
-            margin-bottom: 10px; /* Espaciado entre encabezados */
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 10px;
         }
         .main-title {
-            font-size: 70px; /* Tamaño para el título principal */
-            font-weight: bold; /* Negrita */
+            font-size: 70px;
+            font-weight: bold;
         }
         .main-title span {
-            color: #02d609; /* Color verde para "Friday" */
+            color: #02d609;
         }
         .image-container {
-            margin-top: 40px; /* Espaciado entre la cuenta regresiva y la imagen */
+            margin-top: 40px;
         }
         .image-container img {
-            width: 33.33%; /* Tercio del tamaño de la pantalla */
-            max-width: 400px; /* Máximo ancho para no exceder en pantallas pequeñas */
-            height: auto; /* Mantener la relación de aspecto */
+            width: 33.33%;
+            max-width: 400px;
+            height: auto;
         }
     </style>
 </head>
 <body>
 
-    <div id="fullscreen-toggle">+</div> <!-- Botón para pantalla completa -->
+    <div id="fullscreen-toggle">+</div>
 
     <div class="heading">Llega el auténtico</div>
     <div class="main-title">Black <span>Friday</span></div>
@@ -108,36 +108,38 @@
     </div>
 
     <script>
-        // Fecha y hora del evento (31/10/2024 a las 08:00)
-        var eventDate = new Date("Oct 31, 2024 08:00:00").getTime();
+        (function() {
+            // Fecha y hora del evento (31/10/2024 a las 08:00)
+            var eventDate = new Date("Oct 31, 2024 08:00:00").getTime();
 
-        // Actualizar la cuenta regresiva cada 1 segundo
-        var countdown = setInterval(function() {
+            // Actualizar la cuenta regresiva cada 1 segundo
+            function updateCountdown() {
+                var now = new Date().getTime();
+                var distance = eventDate - now;
 
-            // Obtener la fecha y hora actual
-            var now = new Date().getTime();
+                // Asegurarse de que el tiempo restante sea positivo
+                if (distance < 0) {
+                    distance = 0;
+                }
 
-            // Calcular la diferencia entre la fecha del evento y la fecha actual
-            var distance = eventDate - now;
+                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Calcular días, horas, minutos y segundos
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-            // Formatear números a dos dígitos
-            document.getElementById("days").innerHTML = String(days).padStart(2, '0');
-            document.getElementById("hours").innerHTML = String(hours).padStart(2, '0');
-            document.getElementById("minutes").innerHTML = String(minutes).padStart(2, '0');
-            document.getElementById("seconds").innerHTML = String(seconds).padStart(2, '0');
-
-            // Si la cuenta regresiva ha terminado, mostrar un mensaje
-            if (distance < 0) {
-                clearInterval(countdown);
-                document.getElementById("countdown").innerHTML = "¡Evento Comenzado!";
+                // Mostrar el resultado en los elementos con los IDs correspondientes
+                document.getElementById("days").innerHTML = ('0' + days).slice(-2);
+                document.getElementById("hours").innerHTML = ('0' + hours).slice(-2);
+                document.getElementById("minutes").innerHTML = ('0' + minutes).slice(-2);
+                document.getElementById("seconds").innerHTML = ('0' + seconds).slice(-2);
             }
-        }, 1000);
+
+            // Ejecutar la función inmediatamente
+            updateCountdown();
+
+            // Volver a ejecutar la función cada segundo
+            setInterval(updateCountdown, 1000);
+        })();
 
         // Función para verificar si el navegador soporta pantalla completa
         function supportsFullscreen() {
@@ -164,7 +166,7 @@
                     document.documentElement.msRequestFullscreen();
                 }
                 isFullscreen = true;
-                fullscreenToggle.textContent = "-"; // Cambiar el "+" a "-" cuando esté en pantalla completa
+                fullscreenToggle.textContent = "-";
             } else {
                 // Salir de pantalla completa
                 if (document.exitFullscreen) {
@@ -177,7 +179,7 @@
                     document.msExitFullscreen();
                 }
                 isFullscreen = false;
-                fullscreenToggle.textContent = "+"; // Cambiar el "-" a "+" cuando se salga de pantalla completa
+                fullscreenToggle.textContent = "+";
             }
         });
     </script>
