--- a/index.html
+++ b/index.html
@@ -96,13 +96,23 @@
         .image-container {
             margin-top: 15vh;
             padding-bottom: 1vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        .image-container img {
+        .image-replacement {
+            background-color: #02d609;
+            color: #000000;
             width: 50vw;
             max-width: 300px;
-            height: auto;
-            loading: lazy;
+            height: 150px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 5vw;
+            font-weight: bold;
+            border-radius: 5px;
         }
 
         @media screen and (max-width: 600px) {
@@ -123,6 +133,10 @@
             }
             .image-container {
                 margin-top: 8vh;
+            }
+            .image-replacement {
+                height: 100px;
+                font-size: 7vw;
             }
         }
     </style>
@@ -157,7 +171,7 @@
     </div>
 
     <div class="image-container">
-        <img src="logo-web_nuevo.webp" alt="Descripción de la imagen">
+        <div class="image-replacement">LOGO</div>
     </div>
 
     <script>
@@ -228,3 +242,4 @@
 
 </body>
 </html>
+
