--- a/index.html
+++ b/index.html
@@ -101,18 +101,21 @@
             align-items: center;
         }
 
-        .image-replacement {
-            background-color: #02d609;
-            color: #000000;
-            width: 50vw;
-            max-width: 300px;
-            height: 150px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 5vw;
+        .logo-text {
+            font-size: 10vw; /* Tamaño del texto para que sea prominente */
             font-weight: bold;
-            border-radius: 5px;
+            color: #ffffff;
+            position: relative;
+            display: inline-block;
+        }
+
+        /* Estilo para el acento circunflejo sobre la letra "A" */
+        .circumflex {
+            position: absolute;
+            top: -2vw;
+            left: 4vw;
+            font-size: 3vw;
+            color: #FFD700; /* Amarillo oscuro */
         }
 
         @media screen and (max-width: 600px) {
@@ -134,9 +137,13 @@
             .image-container {
                 margin-top: 8vh;
             }
-            .image-replacement {
-                height: 100px;
-                font-size: 7vw;
+            .logo-text {
+                font-size: 15vw;
+            }
+            .circumflex {
+                top: -4vw;
+                left: 6vw;
+                font-size: 5vw;
             }
         }
     </style>
@@ -171,7 +178,9 @@
     </div>
 
     <div class="image-container">
-        <div class="image-replacement">LOGO</div>
+        <div class="logo-text">
+            ChangoM<span class="circumflex">^</span>as
+        </div>
     </div>
 
     <script>
@@ -242,4 +251,3 @@
 
 </body>
 </html>
-
